--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javaresources:
 
 queue:
-  name: Default
+  name: Azure Pipelines
   demands: maven
 
 steps:
@@ -15,17 +15,20 @@ steps:
     goals: 'install:install-file'
     options: '-Dfile=$(system.defaultworkingdirectory)/myapp/mssqljdbc/sqljdbc42.jar -DgroupId=com.microsoft.sqlserver -DartifactId=sqljdbc4 -Dversion=6.0 -Dpackaging=jar'
     publishJUnitResults: false
+
 - task: Maven@3
   displayName: 'Maven myapp/pom.xml'
   inputs:
     mavenPomFile: myapp/pom.xml
     options: '-Dmaven.test.skip=true'
+
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
   inputs:
     SourceFolder: myapp/target
     Contents: myapp.war
     TargetFolder: '$(build.artifactstagingdirectory)'
+
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   inputs:
