--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
 
 - task: Maven@3
   inputs:
-    mavenPomFile: 'my-app/pom.xml'
+    mavenPomFile: 'myapp/pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
