--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -17,7 +17,18 @@
 		<version>2.0.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
+	<distributionManagement>
+	    <repository>
+			<id>MavenDemo</id>
+  			<url>https://pkgs.dev.azure.com/DevOps--Academy/CI-CD/_packaging/Maven/maven/v1</url>
+  			<releases>
+  			  <enabled>true</enabled>
+  			</releases>
+  			<snapshots>
+  			  <enabled>true</enabled>
+  			</snapshots>
+		</repository>
+	</distributionManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
