--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -17,6 +17,18 @@
 		<version>2.0.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<repositories>
+		<repository>
+		  <id>Maven</id>
+		  <url>https://pkgs.dev.azure.com/DevOps--Academy/CI-CD/_packaging/Maven/maven/v1</url>
+		  <releases>
+		    <enabled>true</enabled>
+		  </releases>
+		  <snapshots>
+		    <enabled>true</enabled>
+		  </snapshots>
+		</repository>
+	</repositories>
 	<distributionManagement>
 	    <repository>
 		  <id>Maven</id>
